objects/ProgramRebateTypeBenefit.object
<CustomObject>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Program Rebate Type Benefits</relationshipLabel>
        <relationshipName>Program_Rebate_Type_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_BPAOrderDisplayIndicator__c</fullName>
        <formula>(TEXT(PMC_SS_ProductFamily__c)) &amp; &quot; &quot; &amp; TEXT(PMC_SS_ScaleLevel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPA Order Display Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_ProductTierAppend__c</fullName>
        <description>This field will be used to concatenate Product Family and Scale Level - so that data ordering can be enabled while pulling data in DocuSign.
To be used completely for backend purposes</description>
        <formula>TEXT(PMC_SS_ProductFamily__c) &amp; TEXT( PMC_SS_ScaleLevel__c )</formula>
        <label>ProductTierAppend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_ProgramRebateType__c</fullName>
        <description>This field will be used to get the value of Type field of Rebate Type record associated with Program Rebate Type Benefit</description>
        <formula>TEXT(ProgramRebateType.PMC_SS_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Rebate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ActualIncentives__c</fullName>
        <description>Stores the Actual Incentives</description>
        <label>Actual Incentives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Forecasted_Quantity__c</fullName>
        <label>Forecasted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_InvoiceQuantity__c</fullName>
        <description>Captures the Invoice Quantity from a specific Product Family</description>
        <label>Invoice Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ProductFamily__c</fullName>
        <description>Captures Product Family to cater towards the SAP integration</description>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_SS_ProductFamilies</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_Projected_Incentive__c</fullName>
        <label>Projected Incentive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ScaleLevel__c</fullName>
        <description>Specifies the scale level of Rebate Program</description>
        <label>Scale Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_ProgramRebateTypeBenefits</fullName>
        <filterScope>Everything</filterScope>
        <label>AllProgramRebateTypeBenefits</label>
    </listViews>
    <listViews>
        <fullName>My_ProgramRebateTypeBenefits</fullName>
        <filterScope>Mine</filterScope>
        <label>MyProgramRebateTypeBenefits</label>
    </listViews>
    <recordTypes>
        <fullName>Exclusive_Space</fullName>
        <active>true</active>
        <label>Exclusive Space</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program_Rebate_Type_Benefit</fullName>
        <active>true</active>
        <label>Program Rebate Type Benefit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PMC_SS_RebateTypeBenefitModification</fullName>
        <active>true</active>
        <description>This Validation rule will not allow create/update on Rebate Type Benefit once the Rebate program is Inactive.</description>
        <errorConditionFormula>AND(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ) ,
OR(
ISPICKVAL( PRIORVALUE( Status ) , &apos;Inactive&apos;),
ISNEW()
),
ISPICKVAL(   ProgramRebateType.RebateProgram.Status   , &apos;Inactive&apos;)
)</errorConditionFormula>
        <errorMessage>Cannot create/update Rebate Type Benefit once Rebate Program is Inactive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_RestrictRebateTypeBenefitEdit</fullName>
        <active>true</active>
        <description>This validation rule is used to restrict the user from editing or creating Rebate Type Benefit for Under Revision or Approved Sales Agreement.</description>
        <errorConditionFormula>AND( 
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ) ,
NOT(
OR(
AND(
ISCHANGED(  Status ) ,
ISPICKVAL( Status , &apos;Active&apos;) ,
ISPICKVAL(  ProgramRebateType.RebateProgram.PMC_SS_SalesAgreement__r.Status  , &apos;Activated&apos;)
),
AND(
ISCHANGED(  Status ) ,
ISPICKVAL( Status , &apos;Inactive&apos;) ,
ISPICKVAL(  ProgramRebateType.RebateProgram.PMC_SS_SalesAgreement__r.Status  , &apos;Expired&apos;)
)
)
),
NOT(ISPICKVAL( ProgramRebateType.RebateProgram.PMC_SS_SalesAgreement__r.Status , &apos;Cancelled&apos;)),
OR( ISPICKVAL(  ProgramRebateType.RebateProgram.PMC_SS_SalesAgreement__r.PMC_SS_ApprovalStatus__c  , &apos;Approved&apos;), ISPICKVAL( ProgramRebateType.RebateProgram.PMC_SS_SalesAgreement__r.PMC_SS_ApprovalStatus__c , &apos;Under Revision&apos;)  ),

OR((PRIORVALUE( PMC_SS_Projected_Incentive__c ) = PMC_SS_Projected_Incentive__c) ,ISBLANK(PMC_SS_Projected_Incentive__c)),

OR((PRIORVALUE( PMC_SS_Forecasted_Quantity__c ) = PMC_SS_Forecasted_Quantity__c) ,ISBLANK(PMC_SS_Forecasted_Quantity__c))
)</errorConditionFormula>
        <errorDisplayField>BenefitValue</errorDisplayField>
        <errorMessage>Rebate Type Benefit can’t be created/edited at this stage. Please Amend the Sales Agreement to make revisions to Rebate Type Benefit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_RestrictRebateTypeBenefitEditTEST</fullName>
        <active>false</active>
        <description>This validation rule is used to restrict the user from editing or creating Rebate Type Benefit for Under Revision or Approved Sales Agreement.</description>
        <errorConditionFormula>AND(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ) ,
NOT(
OR(
AND(
ISCHANGED( Status ) ,
ISPICKVAL( Status , &apos;Active&apos;) ,
ISPICKVAL( ProgramRebateType.RebateProgram.PMC_SS_SalesAgreement__r.Status , &apos;Activated&apos;)
),
AND(
ISCHANGED( Status ) ,
ISPICKVAL( Status , &apos;Inactive&apos;) ,
ISPICKVAL( ProgramRebateType.RebateProgram.PMC_SS_SalesAgreement__r.Status , &apos;Expired&apos;)
)
)
),
NOT(ISPICKVAL( ProgramRebateType.RebateProgram.PMC_SS_SalesAgreement__r.Status , &apos;Cancelled&apos;)),
OR( ISPICKVAL( ProgramRebateType.RebateProgram.PMC_SS_SalesAgreement__r.PMC_SS_ApprovalStatus__c , &apos;Approved&apos;), ISPICKVAL( ProgramRebateType.RebateProgram.PMC_SS_SalesAgreement__r.PMC_SS_ApprovalStatus__c , &apos;Under Revision&apos;) ),



OR( OR(ISBLANK(PMC_SS_Projected_Incentive__c),(PRIORVALUE( PMC_SS_Projected_Incentive__c ) = PMC_SS_Projected_Incentive__c) ),
ISNEW()),

OR(ISBLANK(PMC_SS_Forecasted_Quantity__c),(PRIORVALUE( PMC_SS_Forecasted_Quantity__c) = PMC_SS_Forecasted_Quantity__c))
)</errorConditionFormula>
        <errorMessage>TEST Rebate Type Benefit can’t be edited at this stage. Please Amend the Sales Agreement to make revisions Rebate Type Benefit.</errorMessage>
    </validationRules>
</CustomObject>